cluster/dev/temporal/temporal-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
  namespace: dev
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: temporal
          image: temporalio/auto-setup:1.25.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 7233
              name: grpc-frontend
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          startupProbe:
            tcpSocket:
              port: 7233
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          livenessProbe:
            tcpSocket:
              port: 7233
            initialDelaySeconds: 90
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 7233
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-frontend
  namespace: dev
spec:
  type: NodePort
  selector:
    app: temporal
  ports:
    - name: grpc-frontend
      port: 7233
      targetPort: 7233
      nodePort: 30233
